--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -18,8 +18,8 @@
 
 <header>
     <nav>
-      <a href="#">Services</a>
-      <a href="#">Product</a>
+      <a href="/great-idea/services.html">Services</a>
+      <a href="/great-idea/product.html">Product</a>
       <a href="#">Vision</a>
       <a href="#">Features</a>
       <a href="#">About</a>
@@ -100,6 +100,7 @@
   </div>
   <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
 </section>
+
 <footer>
   <p>Copyright Great Idea! 2018</p>
 </footer>
