--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -20,7 +20,7 @@
     <header>
       <nav>
         <a href="/great-idea/services.html">Services</a>
-        <a href="#">Product</a>
+        <a href="/great-idea/product.html">Product</a>
         <a href="#">Vision</a>
         <a href="#">Features</a>
         <a href="#">About</a>
